--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <img src="img/main-pin-image.png" width="40" height="44" draggable="false">
         <svg viewBox="0 0 70 70">
           <defs>
-            <path d="M35,35m-23,0a23,23 0 1,1 46,0a23,23 0 1,1 -46,0" id="tophalf" />
+            <path d="M35,35m-23,0a23,23 0 1,1 46,0a23,23 0 1,1 -46,0" id="tophalf"/>
           </defs>
 
-          <ellipse cx="35" cy="35" rx="35" ry="35" fill="rgba(255, 86, 53, 0.7)" />
+          <ellipse cx="35" cy="35" rx="35" ry="35" fill="rgba(255, 86, 53, 0.7)"/>
           <text><textPath xlink:href="#tophalf" startOffset="0">Поставь меня куда-нибудь</textPath></text>
         </svg>
       </button>
@@ -93,8 +93,8 @@
             <div class="notice__preview">
               <img src="img/muffin.png" alt="Аватар пользователя"  width="40" height="44">
             </div>
-            <input type="file" id="avatar">
-            <label class="drop-zone" for="avatar">Загрузите или&nbsp;перетащите сюда фото</label>
+            <input type="file" id="avatar" accept="image/*">
+            <label class="drop-zone  drop-zone--avatar"  for="avatar">Загрузите или&nbsp;перетащите сюда фото</label>
             <p class="notice__info">Заполните все обязательные поля, назначьте цену, загрузите фотографии. Придумайте интересное описание. Оно сделает объявление более живым и привлекательным. Получившееся объявление должно давать гостям полное представление о вашем жилье.</p>
           </div>
         </div>
@@ -174,8 +174,8 @@
         <input type="checkbox" name="features" value="washer" id="feature-washer">
         <label class="feature feature--washer" for="feature-washer">Стиральная машина</label>
 
-        <input type="checkbox" name="features" value="elevator" id="feature-washer">
-        <label class="feature feature--elevator" for="feature-washer">Лифт</label>
+        <input type="checkbox" name="features" value="elevator" id="feature-elevator">
+        <label class="feature feature--elevator" for="feature-elevator">Лифт</label>
 
         <input type="checkbox" name="features" value="conditioner" id="feature-conditioner">
         <label class="feature feature--conditioner" for="feature-conditioner">Кондиционер</label>
@@ -189,9 +189,10 @@
       <fieldset class="form__element form__element--wide">
         <label>Фотографии жилья</label>
         <div class="form__photo-container">
-          <div class="upload">
-            <input type="file" id="images" multiple>
-            <label for="images" class="drop-zone">Загрузите или&nbsp;перетащите сюда фото</label>
+          <div class="upload  drop-zone  drop-zone--gallery">
+            <input type="file" name="files" id="images" accept="image/*" multiple>
+            <label for="images">Загрузите или&nbsp;перетащите сюда фото</label>
+            <div class="form__gallery"></div>
           </div>
         </div>
       </fieldset>
@@ -257,6 +258,8 @@
   <script src="js/pin.js"></script>
   <script src="js/card.js"></script>
   <script src="js/form.js"></script>
+  <script src="js/avatar.js"></script>
+  <script src="js/photo.js"></script>
   <script src="js/map.js"></script>
   
 </body>
